--- a/src/app.css
+++ b/src/app.css
@@ -1,7 +1,7 @@
 @import url('./css-reset.css');
 @import url('./css-fonts.css');
 @import url('./css-vars.css');
-
+@import url('./css-prism-lucario.css');
 html {
 	scroll-behavior: smooth;
 }
