--- a/src/app.css
+++ b/src/app.css
@@ -7,7 +7,18 @@ html {
 }
 
 h1,
-h2 {
+h2,
+h3,
+h4,
+h5,
+h6 {
 	color: var(--black);
 	font-family: 'Besley';
+}
+
+pre,
+code {
+	border-radius: 5px;
+	overflow-x: scroll;
+	width: 100%;
 }
