--- a/src/app.css
+++ b/src/app.css
@@ -20,5 +20,13 @@ pre,
 code {
 	border-radius: 5px;
 	overflow-x: scroll;
-	width: 100%;
+	word-wrap: break-word;
+	white-space: pre;
+	min-width: 0;
+	flex-shrink: 0;
+	overflow-x: auto;
+	max-width: 100%;
+	border-width: 0px;
+	word-wrap: break-word;
+	word-break: break-all;
 }
