--- a/src/app.css
+++ b/src/app.css
@@ -12,8 +12,8 @@ h3,
 h4,
 h5,
 h6 {
-	color: var(--black);
 	font-family: 'Besley';
+	margin: 0px;
 }
 
 pre,
@@ -29,4 +29,11 @@ code {
 	border-width: 0px;
 	word-wrap: break-word;
 	word-break: break-all;
+}
+
+button {
+	padding: 0.5rem 1rem;
+	border: none;
+	border-radius: 4px;
+	cursor: pointer;
 }
